--- a/sprite.css
+++ b/sprite.css
@@ -6,12 +6,12 @@ button {
     background: url("yesno.png") no-repeat;
     display: block;
 }
-.yes {
+#yes {
     width: 225px;
     height: 112px;
     background-position: 0 0;
 }
-.no {
+#no {
     width: 225px;
     height: 112px;
     background-position: 0 -112px;
@@ -40,5 +40,7 @@ p.speech:after {
 	margin-top: -20px;
 	margin-left: -20px;
 }
-
+#show {
+    display: none;
+}
 
